# python-libusb1

./: .gitattributes  .gitignore  .pylintrc  .travis.yml  KEYS  MANIFEST.in  README  README.rst  buildTestLibusb.sh  buildWheels.sh  libusb1.py  mypy.ini  pylint.sh  runTestLibusb.sh  setup.cfg  setup.py  setup.sh  stdeb.cfg  testUSB1.py  usb1.py
examples/: hotplug.py  hotplug_advanced.py  listdevs.py  scan_device_tree.py
usb1/: __init__.py  __init__.pyi  _libusb1.py  _version.py  libusb1.py  libusb1.pyi  testUSB1.py
usb1/__pyinstaller/: __init__.py  hook-usb1.py  test_libusb1_packaging.py
